trying to make collision work

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<script type="text/javascript" src="MainCharacter.js"></script>
 		<script type="text/javascript" src="Box.js"></script>
 		<style type="text/css" media="screen">
-		    	canvas, img { display:block; margin:1em auto; border:1px solid black; }
-		    	canvas { background:url(background.png) }
-    </style>
+		    	canvasxx, img { display:block; margin:1em auto; border:1px solid black; }
+		    	canvasxx { background:url(background.png) }
+		</style>
 	</head>
 	<body>
 		<canvas id="canvas" width="800" height="700">
