Changed tests to catch and throw exceptions

--- a/tests.html
+++ b/tests.html
@@ -2,34 +2,16 @@
 <html lang="en">
 	<head>
 		<title>Tests</title>
+		<script type="text/javascript" src="./testFramework/TestFramework.js"></script>
 		<script type="text/javascript" src="testMainElement.js"></script>
 		<script type="text/javascript" >
-			var currentMethod = "will hold method name";
-			function assertTrue(actual,message){
-				var color = "green";
-				if(!actual)
-					color = "red";
-					document.write("<tr bgcolor=\""+color+"\"><td>"+currentMethod+"</td><td>true</td><td>"+actual+"</td><td> "+message+"</td></tr>");
-			}
-
-			function runTestsFor(testClass){
-				document.write("<table border=\"1\">");
-				document.write("<tr><td>"+testClass.constructor.name+"</td></tr>");
-				document.write("<tr><td>Test</td><td>Expected</td><td>Actual</td><td>Message</td></tr>");
-				for(var property in testClass){
-					if(typeof(eval("testClass."+property)) == 'function' && property.indexOf("test")==0){
-						currentMethod = property;
-						eval("testClass."+property+"()")
-					}
-				}
-				document.write("</table>");
-			}			
-
 			function runTests(){
 				runTestsFor(new TestMainElement());
 			}
 		</script>
 	</head>
 	<body onLoad="runTests()">
+	<table id="testResults" border="1">
+	</table>
 	</body>
 </html>
