Redoing with tdd

--- a/tests.html
+++ b/tests.html
@@ -4,9 +4,10 @@
 		<title>Tests</title>
 		<script type="text/javascript" src="./testFramework/TestFramework.js"></script>
 		<script type="text/javascript" src="testMainElement.js"></script>
+		<script type="text/javascript" src="MainCharacter.js"></script>
 		<script type="text/javascript" >
 			function runTests(){
-				runTestsFor(new TestMainElement());
+				runTestsFor(new TestElement());
 			}
 		</script>
 	</head>
