Added line calculations

--- a/tests.html
+++ b/tests.html
@@ -4,10 +4,14 @@
 		<title>Tests</title>
 		<script type="text/javascript" src="./testFramework/TestFramework.js"></script>
 		<script type="text/javascript" src="testMainElement.js"></script>
+		<script type="text/javascript" src="testUtils.js"></script>
+		
 		<script type="text/javascript" src="MainCharacter.js"></script>
+		<script type="text/javascript" src="Utils.js"></script>
 		<script type="text/javascript" >
 			function runTests(){
 				runTestsFor(new TestElement());
+				runTestsFor(new TestUtils());
 			}
 		</script>
 	</head>
