--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>JavaScript Platformer 1</title>
 		<script type="text/javascript" src="Game.js"></script>
+		<script type="text/javascript" src="Utils.js"></script>
 		<script type="text/javascript" src="MainCharacter.js"></script>
 		<script type="text/javascript" src="Box.js"></script>
 		<style type="text/css" media="screen">
