Added a new file to separate Element class

--- a/tests.html
+++ b/tests.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="testMainElement.js"></script>
 		<script type="text/javascript" src="testUtils.js"></script>
 		
-		<script type="text/javascript" src="MainCharacter.js"></script>
+		<script type="text/javascript" src="Element.js"></script>
 		<script type="text/javascript" src="Utils.js"></script>
 		<script type="text/javascript" >
 			function runTests(){
