--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>JavaScript Platformer 1</title>
 		<script type="text/javascript" src="Game.js"></script>
 		<script type="text/javascript" src="Utils.js"></script>
+		<script type="text/javascript" src="Element.js"></script>
 		<script type="text/javascript" src="MainCharacter.js"></script>
 		<script type="text/javascript" src="Box.js"></script>
 		<style type="text/css" media="screen">
