--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html lang="en">
+<html>
 	<head>
-		<title>JavaScript Platformer 1</title>
+		<title>JSPlatformer</title>
 		<script type="text/javascript" src="Game.js"></script>
 		<script type="text/javascript" src="Utils.js"></script>
 		<script type="text/javascript" src="Element.js"></script>
@@ -16,5 +15,7 @@
 		<canvas id="canvas" width="1000" height="300">
 			<p>Your browser does not support the canvas element.</p>
 		</canvas>
+		<br>
+		<textarea id="output" rows="40" cols="150"></textarea>
 	</body>
 </html>
