Renamed file With game and element

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>JSPlatformer</title>
 		<script type="text/javascript" src="Game.js"></script>
 		<script type="text/javascript" src="Utils.js"></script>
-		<script type="text/javascript" src="Element.js"></script>
+		<script type="text/javascript" src="GameBasis.js"></script>
 		<script type="text/javascript" src="MainCharacter.js"></script>
 		<script type="text/javascript" src="Box.js"></script>
 		<style type="text/css" media="screen">
