Tried to get the code a little organized

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 	<head>
 		<title>JSPlatformer</title>
-		<script type="text/javascript" src="Game.js"></script>
-		<script type="text/javascript" src="Utils.js"></script>
-		<script type="text/javascript" src="GameBasis.js"></script>
-		<script type="text/javascript" src="MainCharacter.js"></script>
-		<script type="text/javascript" src="Box.js"></script>
+		<script type="text/javascript" src="./GameBasis/src/Element.js"></script>
+		<script type="text/javascript" src="./GameBasis/src/Utils.js"></script>
+		<script type="text/javascript" src="./GameBasis/src/Game.js"></script>
+		
+		<script type="text/javascript" src="./PlatformGame/src/Box.js"></script>
+		<script type="text/javascript" src="./PlatformGame/src/MainCharacter.js"></script>
+		<script type="text/javascript" src="./PlatformGame/src/Game.js"></script>
 		<style type="text/css" media="screen">
 		    	canvasxx, img { display:block; margin:1em auto; border:1px solid black; }
 		    	canvasxx { background:url(background.png) }
