--- a/tests.html
+++ b/tests.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>Tests</title>
 		<script type="text/javascript" src="./testFramework/TestFramework.js"></script>
-		<script type="text/javascript" src="testMainElement.js"></script>
-		<script type="text/javascript" src="testUtils.js"></script>
+		<script type="text/javascript" src="./GameBasis/tests/TestElement.js"></script>
+		<script type="text/javascript" src="./GameBasis/tests/TestUtils.js"></script>
 		
-		<script type="text/javascript" src="GameBasis.js"></script>
-		<script type="text/javascript" src="Utils.js"></script>
+		<script type="text/javascript" src="./GameBasis/src/Element.js"></script>
+		<script type="text/javascript" src="./GameBasis/src/Utils.js"></script>
 		<script type="text/javascript" >
 			function runTests(){
 				runTestsFor(new TestElement());
