Added on step listeners and turned gravity into a listener

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<script type="text/javascript" src="./GameBasis/src/Element.js"></script>
 		<script type="text/javascript" src="./GameBasis/src/Utils.js"></script>
 		<script type="text/javascript" src="./GameBasis/src/Game.js"></script>
+		<script type="text/javascript" src="./GameBasis/src/Gravity.js"></script>
 		
 		<script type="text/javascript" src="./PlatformGame/src/Box.js"></script>
 		<script type="text/javascript" src="./PlatformGame/src/MainCharacter.js"></script>
