added buttons for touch screen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 			<p>Your browser does not support the canvas element.</p>
 		</canvas>
 		<br>
+		<input type="button" id="up" value="X"    onmouseover="document.onkeydown({keyCode: up   });" onmouseout="document.onkeyup({keyCode: up   });" />
+		<input type="button" id="up" value="^"    onmouseover="document.onkeydown({keyCode: up   });" onmouseout="document.onkeyup({keyCode: up   });" />
+		<input type="button" id="up" value="O"    onmouseover="document.onkeydown({keyCode: up   });" onmouseout="document.onkeyup({keyCode: up   });" />
+		<br>
+		<input type="button" id="left" value="<"  onmouseover="document.onkeydown({keyCode: left });" onmouseout="document.onkeyup({keyCode: left });" />
+		<input type="button" id="down" value="V"  onmouseover="document.onkeydown({keyCode: down });" onmouseout="document.onkeyup({keyCode: down });" />
+		<input type="button" id="right" value=">" onmouseover="document.onkeydown({keyCode: right});" onmouseout="document.onkeyup({keyCode: right});" />
+		<br>
 		<textarea id="output" rows="40" cols="150"></textarea>
 	</body>
 </html>
