Last step before creating element factory, added lots of code repetition for now

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="./GameBasis/src/Game.js"></script>
 		<script type="text/javascript" src="./GameBasis/src/GameUtils.js"></script>
 		
-		<script type="text/javascript" src="./PlatformGame/src/Box.js"></script>
+		<script type="text/javascript" src="./PlatformGame/src/BoxFactory.js"></script>
 		<script type="text/javascript" src="./PlatformGame/src/MainCharacter.js"></script>
 		<script type="text/javascript" src="./PlatformGame/src/Game.js"></script>
 		<style type="text/css" media="screen">
