It works! All events can be edited on the code editor text area

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 		<canvas id="canvas" width="1000" height="300">
 			<p>Your browser does not support the canvas element.</p>
 		</canvas>
-		<textarea id="output" rows="10" cols="10"></textarea>
-		<br>
+		<!--
 		<input type="button" id="up" value="X"    onmouseover="document.onkeydown({keyCode: up   });" onmouseout="document.onkeyup({keyCode: up   });" />
 		<input type="button" id="up" value="^"    onmouseover="document.onkeydown({keyCode: up   });" onmouseout="document.onkeyup({keyCode: up   });" />
 		<input type="button" id="up" value="O"    onmouseover="document.onkeydown({keyCode: up   });" onmouseout="document.onkeyup({keyCode: up   });" />
@@ -29,12 +28,15 @@
 		<input type="button" id="left" value="<"  onmouseover="document.onkeydown({keyCode: left });" onmouseout="document.onkeyup({keyCode: left });" />
 		<input type="button" id="down" value="V"  onmouseover="document.onkeydown({keyCode: down });" onmouseout="document.onkeyup({keyCode: down });" />
 		<input type="button" id="right" value=">" onmouseover="document.onkeydown({keyCode: right});" onmouseout="document.onkeyup({keyCode: right});" />
+		<textarea id="output" rows="10" cols="10"></textarea>
 		<br>
+		-->
 		<br>
 		<select id="elements" onchange="loadElementEvents();">
 		</select>
 		<select id="events" onchange="fillCodeEditor();">
 		</select>
+		<input type="button" id="saveEvent" value="save event" onclick="writeCodeToFunction();"/>
 		<br>
 		<textarea id="codeEditor" rows="10" cols="150" ></textarea>
 	</body>
