added image rendering on element, added restart button

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 		</div>
 		
 		<div id="gameFlowControl">
+			<input type="button" id="restart" value="Restart"/>
 			<input type="button" id="playPause" value="Pause"/>
 		</div>
 		
-		<canvas id="gameCanvas" width="1000" height="300">
+		<canvas id="gameCanvas" width="500" height="300">
 			<p>Your browser does not support the canvas element.</p>
 		</canvas>
 		<!--
