--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
 		<table id="gameEditor" border ="0">
 			<tr>
-				<td rowspan="2" width="10%">
-					<select id="factories" size="20"></select>
+				<td width="10%">
+					<input type="text" id="searchOrAdd" value="NewElementFactory"/>
 				</td>
 				<td>
 					<select id="events" ></select>
@@ -65,6 +65,9 @@
 				</td>
 			</tr>
 			<tr>
+				<td>
+					<select id="factories" size="20"></select>
+				</td>
 				<td>
 					<textarea id="codeEditor" rows="20"></textarea>
 				</td>
