Fixed touch screen controls

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<input type="button" class="ctrlButton" id="up" value="X"/>
 				</td>
 				<td>
-					<input type="button" class="ctrlButton" id="up" value="^"/>
+					<input type="button" class="ctrlButton" id="upBtn" value="^"/>
 				</td>
 				<td>
 					<input type="button" class="ctrlButton" id="up" value="O"/>
@@ -42,13 +42,13 @@
 			</tr>
 			<tr>
 				<td>
-					<input type="button" class="ctrlButton" id="left" value="<"/>
+					<input type="button" class="ctrlButton" id="leftBtn" value="<"/>
 				</td>
 				<td>
-					<input type="button" class="ctrlButton" id="down" value="V"/>
+					<input type="button" class="ctrlButton" id="downBtn" value="V"/>
 				</td>
 				<td>
-					<input type="button" class="ctrlButton" id="right" value=">"/>
+					<input type="button" class="ctrlButton" id="rightBtn" value=">"/>
 				</td>
 			</tr>
 			</table>
