Added onclick, and now the editor have a name: Cangatoo :P

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Javascript Game Creation Tool</title>
+		<title>Cangatoo - Canvas game Tool</title>
 		<script src="./lib/jquery-1.6.4.js"></script>
 		<script type="text/javascript" src="./PlatformGame/src/Bindings.js"></script>		
 		<link rel="stylesheet" type="text/css" href="./defaultSkin.css" />
