--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 	
 		<a id="touchControlsToogleHide" href="#">Show touch controls</a>||
 		<a id="gameEditorToogleHide" href="#">Hide editor</a>||
-		<a id="exportJavascript" href="#">Export Javascript</a>
+		<a id="exportJavascript" href="#">Export Javascript</a>||
+		<a id="helpToogleHide" href="#">Help</a>
 		<br>
 
+		<p id="help">Cangatoo is a event oriented game editor. Its goal is to be an easy to use tool to create
+		simple 2d games using the power of html5 canvas. There is still a lot of things to be done on Cangatoo,
+		this is just the very beginning of the project.</p>
+		
 		<div id="gameFlowControl">
 			<input type="button" id="restart" value="Restart"/>
 			<input type="button" id="playPause" value="Pause"/>
@@ -69,7 +74,5 @@
 				</td>
 			</tr>
 		</table>
-		<br>
-		<textarea id="output" rows="60"></textarea>
 	</body>
 </html>
