--- a/index.html
+++ b/index.html
@@ -7,41 +7,43 @@
 	</head>
 	<body>
 	
-	<div id="menu">
-		<ul>
-			<li><h2>Game options</h2>
-				<ul>
-					<li><a id="newGame" href="#">New game</a></li>
-					<li><a id="loadGame" href="#">Load game</a></li>
-					<li><a id="exportGame" href="#">Export to html</a></li>
-				</ul>
-			</li>
-		</ul>
-		<ul>
-			<li><h2>Game flow</h2>
-				<ul>
-					<li><a id="gameRestart" href="#">Restart</a></li>
-					<li><a id="gamePause" href="#">Pause</a></li>
-				</ul>
-			</li>
-		</ul>
-		<ul>
-			<li><h2>View</h2>
-				<ul>
-					<li><a id="viewEditor" href="#">&#10003; Editor</a></li>
-					<li><a id="viewTouchButtons" href="#">&nbsp;&nbsp; Touch buttons</a></li>
-				</ul>
-			</li>
-		</ul>
-		<ul>
-			<li><h2>Help</h2>
-				<ul>
-					<li><a id="helpAbout" href="#">About</a></li>
-					<li><a id="helpTutorial" href="#">Tutorial</a></li>
-					<li><a id="helpWebsite" onClick="window.open('https://github.com/beothorn/Cangatoo','Website')">View website</a></li>
-				</ul>
-			</li>
-		</ul>
+	<div id="menuCentering">
+		<div id="menu">
+			<ul>
+				<li><h2>Game options</h2>
+					<ul>
+						<li><a id="newGame" href="#">New game</a></li>
+						<li><a id="loadGame" href="#">Load game</a></li>
+						<li><a id="exportGame" href="#">Export to html</a></li>
+					</ul>
+				</li>
+			</ul>
+			<ul>
+				<li><h2>Game flow</h2>
+					<ul>
+						<li><a id="gameRestart" href="#">Restart</a></li>
+						<li><a id="gamePause" href="#">Pause</a></li>
+					</ul>
+				</li>
+			</ul>
+			<ul>
+				<li><h2>View</h2>
+					<ul>
+						<li><a id="viewEditor" href="#">&#10003; Editor</a></li>
+						<li><a id="viewTouchButtons" href="#">&nbsp;&nbsp; Touch buttons</a></li>
+					</ul>
+				</li>
+			</ul>
+			<ul>
+				<li><h2>Help</h2>
+					<ul>
+						<li><a id="helpAbout" href="#">About</a></li>
+						<li><a id="helpTutorial" href="#">Tutorial</a></li>
+						<li><a id="helpWebsite" onClick="window.open('https://github.com/beothorn/Cangatoo','Website')">View website</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
 	
 		<br>
