--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Cangatoo - Canvas game Tool</title>
 		<script src="./lib/jquery-1.6.4.js"></script>
-		<script type="text/javascript" src="./PlatformGame/src/Bindings.js"></script>		
+		<script type="text/javascript" src="Cangatoo.js"></script>		
 		<link rel="stylesheet" type="text/css" href="./defaultSkin.css" />
 	</head>
 	<body>
@@ -10,7 +10,7 @@
 	<div id="menuCentering">
 		<div id="menu">
 			<ul>
-				<li><h2>Game options</h2>
+				<li><h2>Options</h2>
 					<ul>
 						<li><a id="newGame" href="#">New game</a></li>
 						<li><a id="loadGame" href="#">Load game</a></li>
